# NoteZ

./: .gitignore  CLAUDE.md  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  vitest.config.ts
apps/desktop/src/: App.tsx  index.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: db.rs  events.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: assets.rs  cursors.rs  dev.rs  folders.rs  mod.rs  search.rs  settings.rs  snapshots.rs
apps/desktop/src/components/: AIActivityDialog.tsx  AgentZLogo.tsx  MeasuredVirtualList.tsx  SidebarSplitter.tsx
apps/desktop/src/components/Editor/: MentionPopover.tsx  Toolbar.tsx
apps/desktop/src/components/Editor/lexical/: imageNode.ts  imagePlugin.ts  mentionNode.ts  mentionPlugin.ts  mentionStatusDecorator.ts
apps/desktop/src/components/Pane/: EditorPane.tsx  PaneDropOverlay.tsx  PaneHeader.tsx  TabContent.tsx
apps/desktop/src/components/Sidebar/: DeleteFolderDialog.tsx  NoteListItem.tsx
apps/desktop/src/components/ui/: Badge.tsx  Kbd.tsx  index.ts
apps/desktop/src/lib/: applyTheme.ts  buckets.test.ts  buckets.ts  debounce.ts  editorStringify.ts  editorStringify.worker.ts  externalLinks.ts  format.test.ts  format.ts  lru.test.ts  lru.ts  paneTree.test.ts  paneTree.ts  snippetHighlight.tsx
apps/desktop/src/stores/: clock.ts  folders.ts  mentionRegistry.ts  notes.ts  panes.ts  panesPersist.ts  update.ts
apps/desktop/src/styles/: about.css  app.css  capture.css  editor.css  global.css  panes.css  print.css  settings.css  sidebar.css  toast.css  ui.css
apps/desktop/src/themes/: index.ts
apps/desktop/src/themes/builtins/: default.json  light.json
apps/desktop/src/views/: MainView.tsx  useShortcuts.ts
apps/web/: astro.config.mjs  package.json  vercel.json
apps/web/src/components/: FAQ.astro  FeatureGrid.astro  Features.astro  FinalCTA.astro  Footer.astro  Hero.astro  Nav.astro  OSS.astro  PerfManifesto.astro  PerfPillar.astro  Promises.astro  ScreenshotShowcase.astro  SyncTeaser.astro  Tour.astro  icons.astro
apps/web/src/data/: site.ts
apps/web/src/layouts/: Base.astro
apps/web/src/pages/: datenschutz.astro  impressum.astro  index.astro
apps/web/src/styles/: global.css
docs/: sharing-plan.md  windows-port-plan.md
src/: App.tsx  index.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  db.rs  error.rs  keychain.rs  lib.rs  mac_chrome.rs  models.rs  pagination.rs  setup.rs  shortcuts.rs
src-tauri/src/commands/: ai.rs  assets.rs  capture.rs  cursors.rs  dev.rs  folders.rs  mentions.rs  mod.rs  notes.rs  search.rs  settings.rs  snapshots.rs
src/components/: AIActivityDialog.tsx  AboutDialog.tsx  BrandMark.tsx  DevPanel.tsx  MeasuredVirtualList.tsx  SettingsDialog.tsx  SnapshotsDialog.tsx  ToastHost.tsx  TrashDialog.tsx  VirtualList.tsx
src/components/CommandBar/: CommandBar.tsx
src/components/Editor/: BrokenMentionPopover.tsx  Editor.tsx  MentionPopover.tsx  Toolbar.tsx
src/components/Editor/lexical/: createEditor.ts  editorRefs.ts  imageNode.ts  imagePlugin.ts  mentionNode.ts  mentionPlugin.ts  selectionPath.ts  theme.ts
src/components/Pane/: EditorPane.tsx  EmptyPanePicker.tsx  PaneDropOverlay.tsx  PaneHeader.tsx  PaneSplitter.tsx  PaneTabStrip.tsx  PaneTree.tsx  TabContent.tsx
src/components/Sidebar/: DeleteFolderDialog.tsx  FolderTree.tsx  NoteListItem.tsx  Sidebar.tsx
src/components/icons/: index.tsx
src/components/ui/: Button.tsx  IconButton.tsx  Input.tsx
src/lib/: buckets.ts  constants.ts  debounce.test.ts  diff.test.ts  diff.ts  editorStringify.ts  editorStringify.worker.ts  format.ts  keymap.ts  paneTree.test.ts  paneTree.ts  rowHeightProbe.ts  tauri.ts  types.ts  version.ts
src/stores/: clock.ts  mentionRegistry.ts  notes.ts  panes.ts  panesPersist.ts  settings.ts  toasts.ts  ui.ts  update.ts
src/styles/: about.css  app.css  capture.css  command-bar.css  dev-panel.css  editor.css  global.css  panes.css  settings.css  sidebar.css  snapshots.css  theme.css  toast.css  trash.css
src/themes/: contract.ts  index.ts
src/themes/builtins/: default.json  light.json  mono.json
src/views/: CaptureView.tsx  MainView.tsx  SettingsView.tsx  useSavePipeline.ts  useShortcuts.ts
tools/share-bench/: Cargo.toml
tools/share-bench/src/: main.rs
