[package]
name = "notez"
version = "0.8.14"
description = "NoteZ - fast, local, beautiful notes for Mac."
authors = ["NoteZ Contributors"]
edition = "2021"

[lib]
name = "notez_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async + utility
tokio = { version = "1", features = ["sync"] }
once_cell = "1"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Image / asset pipeline
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
blurhash = "0.2"
sha2 = "0.10"
hex = "0.4"
aho-corasick = "1"

# Unicode word segmentation for FTS query tokenisation. The naive
# `c.is_alphanumeric()` split treats CJK runs as a single giant token
# (no whitespace breaks them up), so a Japanese / Chinese / Korean
# search effectively can't decompose into prefix-matchable tokens.
# `unicode-segmentation` gives us the proper UAX#29 word-boundaries.
unicode-segmentation = "1"

# OpenRouter AI title generation. rustls-tls keeps us off OpenSSL on macOS so
# the bundle stays self-contained.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Secure storage for the OpenRouter API key. Uses macOS Keychain on Mac
# (and the OS-native equivalents on Windows/Linux). Key never lands in the
# SQLite DB - just a "has_key" boolean so the UI knows to show "Stored".
keyring = { version = "3", features = ["apple-native"] }

# Dev-only stress-test note generator. `rand` is only used by the dev module
# (gated on debug_assertions), but Cargo features can't gate deps on
# debug_assertions so it's unconditional - tiny payload, dead-stripped from
# release call sites.
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"
# Direct AppKit access to re-apply the traffic-light inset after vibrancy is
# installed and after Resized/ThemeChanged events. tao's built-in inset hook
# fires on every drawRect, but its first calculation can land at a transient
# layout state (vibrancy-view insertion shifts the title-bar container, and
# bundled vs. unbundled launches differ subtly), producing visibly different
# y-positions between `pnpm tauri dev` and the GitHub-built `.app`. We
# re-apply explicitly at known-good moments so dev and release match.
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSResponder", "NSView", "NSControl", "NSButton", "NSWindow"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSGeometry"] }

[profile.release]
panic = "abort"
codegen-units = 1
# Fat LTO (cross-crate inlining + dead-code elimination across the whole
# dep graph). Slower link, but ~5-10 % faster runtime - hot paths cross
# rusqlite/serde_json/lexical-state-stringify boundaries every save.
lto = "fat"
# Speed > size. For a desktop notes app the user pays the .dmg download
# once but the runtime hot-loop on every keystroke. opt-level=3 is ~10 %
# faster than "s" on the FTS / BM25 / json-serialize paths and adds 2-3 MB
# to the bundle - well worth it.
opt-level = 3
strip = true
